// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomButton disabled renders disabled correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "bottom": 20,
      "left": 50,
      "position": "absolute",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="bottomButton"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "height": 60,
            "justifyContent": "center",
          },
          Object {
            "opacity": 0.6,
          },
          Array [
            Object {
              "alignItems": "center",
              "height": 48,
              "width": 650,
            },
            undefined,
          ],
          Object {
            "borderRadius": 50,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        BUTTON TEXT
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`BottomButton renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "bottom": 20,
      "left": 50,
      "position": "absolute",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="bottomButton"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "height": 60,
            "justifyContent": "center",
          },
          null,
          Array [
            Object {
              "alignItems": "center",
              "height": 48,
              "width": 650,
            },
            undefined,
          ],
          Object {
            "borderRadius": 50,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        BUTTON TEXT
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
